# vlc_simulator

./: README.md  git_commit.bat
VLC_devel/: AtividadePablo.ipynb  README.md  setup.cfg
VLC_devel/.ipynb_checkpoints/: AtividadePablo-checkpoint.ipynb
VLC_devel/Definições de classes VLC/: class_structure_VLC - Copia.xlsx
VLC_devel/Definições de classes VLC/__auto_gen__/: ActivePixelSensor.py  Config.py  Reconstruction.py  Wavefront.py  test_Parameters.py  test_WFS.py
VLC_devel/OFDM example/: BER_EbNo_AWGN_Catarina.m  OFDM_test_real_hermitiana.m  ofdm_example.py
VLC_devel/UML/: UML Overview.docx  convert_to_uml.bat  my_styles.puml
VLC_devel/UML - OLD/: README.md
VLC_devel/class structure_old/: purpose.txt
VLC_devel/class structure_old/__auto_gen__/: Reconstruction.py  Simulation.py  test_ActivePixelSensor.py  test_BouncingPixelSensor.py  test_Config.py  test_Quadcell.py  test_Reconstruction.py  test_Simulation.py
VLC_devel/class_structure/: Usage Tutorial.docx  class_structure.xlsx
VLC_devel/data/: test.txt
VLC_devel/source/: ADC.py  BouncingPixel.py  Channel.py  DAC.py  Detector.py  Global.py  LightSource.py  Mapping.py  MeritFunctions.py  Message.py  Modulator.py  OFDM.py  ROIC.py  RUN.py  Receiver.py  Simulator.py  Tanner.py  Transmitter.py  VLC.py  Virtuoso.py  __init__.py  generalLibrary.py  test_MeritFunctions.py  test_OFDM.py  test_Simulator.py  test_Tanner.py  test_Transmitter.py
VLC_devel/src/: RUN.py
VLC_devel/src/vlcPhy/: ADC.py  (+23 more)
VLC_devel/test/: test_Channel.py  test_Detector.py  test_Global.py  test_Modulator.py  test_Virtuoso.py
(+198 files in other folders)
