[metadata]
name = vlcPhy-belmonte
version = 0.0.1
author = Pablo Nunes Gra Belmonte
author_email = pnabelmonte@gmail.com
description = This package runs a VLC phyisical link simulation (under development).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PabloBelmonte/vlc_simulator/tree/master/VLC_devel
project_urls =
    Bug Tracker = https://github.com/PabloBelmonte/vlc_simulator/tree/master/VLC_devel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src